--- a/_productSwatch.css
+++ b/_productSwatch.css
@@ -25,11 +25,11 @@ $second_value : str-slice($value_of_swatch_size, $position_of_x + 1);
 .form-option-expanded {
     background-color: stencilColor("body-bg");
     border: 1px solid stencilColor("input-border-color-active");
-    left: calc(50% + 10px);
+    left: calc(50%);
     opacity: 0;
     padding: 3px;
     position: absolute;
-    top: calc(50% + 50px);
+    top: -25px;
     transition: opacity 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     visibility: hidden;
 }
